Apply 10 suggestion(s) to 3 file(s)