@@ -458,6 +458,7 @@ public class UserAccountsServerService extends UserAccountServiceImplBase {
      * @param usersRequest the GetPaginatedUsersFilteredRequest passed through from the client service
      * @param responseObserver Used to return the response to the client side.
      */
+    @Override
     public void getPaginatedUsersFilteredByName(GetPaginatedUsersFilteredRequest usersRequest, StreamObserver<PaginatedUsersResponse> responseObserver){
         PaginatedUsersResponse.Builder response = getPaginatedUsersHelper(usersRequest.getPaginationRequestOptions());
 
@@ -466,7 +467,7 @@ public class UserAccountsServerService extends UserAccountServiceImplBase {
                 user.getLastName().toLowerCase(Locale.ROOT))
                 .contains(filteringOptions.getFilterText().toLowerCase(Locale.ROOT));
         List<UserResponse> result = response.getUsersList().stream().filter(byName)
-                .collect(Collectors.toList());
+                .toList();
         response.clearUsers();
         response.addAllUsers(result);
 
